--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,22 +13,22 @@
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 
-	<servlet>
-		<servlet-name>UploadServlet</servlet-name>
-		<servlet-class>com.example.UploadServlet</servlet-class>
+<!-- 	<servlet> -->
+<!-- 		<servlet-name>UploadServlet</servlet-name> -->
+<!-- 		<servlet-class>com.example.UploadServlet</servlet-class> -->
 
-		<multipart-config>
-			<location>/tmp</location>
-			<max-file-size>20848820</max-file-size>
-			<max-request-size>418018841</max-request-size>
-			<file-size-threshold>1048576</file-size-threshold>
-		</multipart-config>
+<!-- 		<multipart-config> -->
+<!-- 			<location>/tmp</location> -->
+<!-- 			<max-file-size>20848820</max-file-size> -->
+<!-- 			<max-request-size>418018841</max-request-size> -->
+<!-- 			<file-size-threshold>1048576</file-size-threshold> -->
+<!-- 		</multipart-config> -->
 
-	</servlet>
+<!-- 	</servlet> -->
 
-	<servlet-mapping>
-		<servlet-name>UploadServlet</servlet-name>
-		<url-pattern>/upload</url-pattern>
-	</servlet-mapping>
+<!-- 	<servlet-mapping> -->
+<!-- 		<servlet-name>UploadServlet</servlet-name> -->
+<!-- 		<url-pattern>/upload</url-pattern> -->
+<!-- 	</servlet-mapping> -->
 
 </web-app>
