--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,18 +15,18 @@
 	<session-config>
 		<session-timeout>100</session-timeout>
 	</session-config>
-	<!-- <servlet> -->
-	<!-- <servlet-name>UploadServlet</servlet-name> -->
-	<!-- <servlet-class>com.example.UploadServlet</servlet-class> -->
+	<servlet>
+	<servlet-name>UploadServlet</servlet-name>
+	<servlet-class>com.example.UploadServlet</servlet-class>
 
-<!-- 	<multipart-config> -->
-	<!-- <location>/tmp</location> -->
-	<!-- <max-file-size>20848820</max-file-size> -->
-	<!-- <max-request-size>418018841</max-request-size> -->
-<!-- 	<file-size-threshold>500000</file-size-threshold> -->
-<!-- 	</multipart-config> -->
+	<multipart-config>
+	<location>/tmp</location>
+	<max-file-size>20848820</max-file-size>
+	<max-request-size>418018841</max-request-size>
+	<file-size-threshold>500000</file-size-threshold>
+	</multipart-config>
 
-	<!-- </servlet> -->
+	</servlet>
 
 	<!-- <servlet-mapping> -->
 	<!-- <servlet-name>UploadServlet</servlet-name> -->
